fixing overflow of header

--- a/src/css/story/minimap.styl
+++ b/src/css/story/minimap.styl
@@ -1,7 +1,7 @@
 #minimap
   height 100vh
   width 100%
-  max-width 15rem
+  max-width 10rem
   position fixed
   top 0
   right 0
@@ -12,7 +12,8 @@
   box-shadow inset 4px 0px 8px rgba(0, 0, 0, 0.25)
   +mq('bp-6')
     transform translateX(0)
-
+  .minimap__container
+    position relative
   .book
     position absolute
     transform translate(-50%, 0)
