--- a/src/css/story/sidebar.styl
+++ b/src/css/story/sidebar.styl
@@ -1,7 +1,7 @@
 #sidebar
 	height 100vh
 	width 100%
-	max-width 20rem
+	max-width 15rem
 	position fixed
 	top 0
 	left 0
